# phmdoctest

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  _config.yml  appveyor.yml  checklist.txt  codecov.yml  conf.py  index.rst  project.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  codecov.yml  demo.yml  deploy.yml  install.yml
doc/: about.md  about.rst  actions_usage.md  api.rst  conf.py  configuring.md  directive1.md  directive1_raw.md  directive1_report.txt  directive1_report_txt.md  directive2.md  directive2_raw.md  directive2_report.txt  directive2_report_txt.md  directive3.md  directive3_raw.md  directive3_report.txt  directive3_report_txt.md  example1.md  example2.md  example2_report.txt  example3.md  examples.rst  inline_example.md  list_of_examples.rst  livelog.py  livelog_bad_session.py  livelog_test_assertion.py  make_wrapped_examples.py  mark_example.md  mark_example_raw.md  my_markdown_file.md  project_test_py.md  quick_links.py  recent_changes.md  requirements.txt  setup.md  setup_doctest.md  test_directive1.py  test_directive1_py.md  (+19 more)
src/phmdoctest/: __main__.py  args.py  cases.py  coder.py  direct.py  entryargs.py  fenced.py  fillrole.py  fixture.py  functions.py  inline.py  main.py  print_capture.py  report.py  simulator.py  tester.py  tool.py  using.py
tests/: bad_session_output.md  bad_skipif_number.md  check_classifiers.py  conftest.py  direct.md  does_not_print.md  empty_code_block.md  empty_code_report.txt  empty_output_block.md  empty_output_report.txt  example1.md  example2.md  example2_report.txt  extra_line_in_output.md  generate.cfg  generate.toml  generate_quietly.ini  generate_summary.toml  ignored_directives.md  k_and_v_setup.md  label_not_identifier.md  label_used_twice.md  managenamespace.md  markdown_preview.py  missing_some_output.md  multiple_skips_report.txt  no_code_blocks.md  no_fenced_code_blocks.md  one_code_block.md  one_mark_skip.md  output_has_blank_lines.md  project_test.py  quick_links.py  requirements.txt  requirements_inspect.txt  session_globals_in_setup.md  setup_only.md  setup_with_inline.md  test_details.py  test_direct.py  (+27 more)
