[metadata]
# This includes the license file(s) in the wheel.

# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license = MIT
license_files = LICENSE.txt

# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
name = phmdoctest
version = 1.2.1
author = Mark Taylor
author_email = mark66547ta2@gmail.com
description = Python syntax highlighted Markdown doctest.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url= https://tmarktaylor.github.io/phmdoctest
project_urls =
    Bug Reports = https://github.com/tmarktaylor/phmdoctest/issues
    Source = https://github.com/tmarktaylor/phmdoctest/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    documentation
    doctest
    markdown
    testing

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Click >= 7.1.1
    commonmark >= 0.9.1
    monotable >= 2.1.1

[options.packages.find]
where = src

[options.package_data]
phmdoctest = py.typed

[options.extras_require]
test =
    coverage
    pytest>=6
    PyYAML>=5.4.1
inspect =
    black
    flake8
    pep8-naming
    mypy
    typing
    check-manifest
    twine
docs =
    myst_parser
    sphinx

# see setup.py
#[options.entry_points]
#console_scripts =
#    phmdoctest = phmdoctest.main:entry_point

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

# Configurations for external tools.

[flake8]
exclude = doc, tests, fixture.py
max-line-length = 88
extend-ignore = E203

[coverage:run]
branch = True
source = src
